<resources>
    <string name="a_z">A — Z</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="achievements">Achievements</string>
    <string name="actigraph">Actigraph</string>
    <string name="action_required">Action required</string>
    <string name="action_settings">Settings</string>
    <string name="activity">Activity</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_manually">Manually added</string>
    <string name="add_on_pack">Extra add-on pack</string>
    <string name="add_record_button">@string/menu_add</string>
    <string name="add_record_button_cancel">@string/button_cancel</string>
    <string name="add_record_day">Day</string>
    <string name="add_record_from">From</string>
    <string name="add_record_title">Add sleep</string>
    <string name="add_record_to">To</string>
    <string name="addon">Add-ons</string>
    <string name="addon_3rd_party_amazfit_notify_fitness">Notify for Amazfit &amp; Zepp</string>
    <string name="addon_3rd_party_amazfit_notify_fitness_huawei">Notify for Amazfit &amp; Zepp from HUAWEI AppGallery!</string>
    <string name="addon_3rd_party_amazfit_tools">Tools &amp; Amazfit, Zepp</string>
    <string name="addon_3rd_party_fossil_hybrid_alelec">Fossil Hybrid alelec</string>
    <string name="addon_3rd_party_garmin">Garmin Alternative</string>
    <string name="addon_3rd_party_mi_band_notify_fitness">Notify for Mi Band</string>
    <string name="addon_3rd_party_mi_band_notify_fitness_huawei">Notify for Mi Band from HUAWEI AppGallery!</string>
    <string name="addon_3rd_party_mi_band_tools">Tools &amp; Mi Band</string>
    <string name="addon_garmin_uninstall">To make Garmin integration work properly, please uninstall the legacy Sleep Garmin add-on, this is now part the main app.</string>
    <string name="addon_go2sleep">Go2sleep</string>
    <string name="addon_maxim_integrated">Maxim Integrated</string>
    <string name="addon_o2ring">O2Ring</string>
    <string name="addon_thanks">Thank you for your support!</string>
    <string name="addon_urbandroid_garmin">Garmin</string>
    <string name="addon_urbandroid_garmin_addon">Start the SLEEP app on you IQConnect Garmin watch</string>
    <string name="addon_urbandroid_samsung">Samsung Gear / Galaxy Watch</string>
    <string name="addon_urbandroid_samsung_description">TIZEN: Samsung Gear S, S2, S3, Gear Fit 2, Galaxy Watch 1,2,3 (watch app required)</string>
    <string name="addon_urbandroid_samsung_wear">Samsung Galaxy Watch</string>
    <string name="addon_urbandroid_samsung_wear_description">IMPORTANT: check Galaxy Wear &gt; Watch settings &gt; Apps &gt; Sleep tracking &gt; Allow background activity [x]!!! Watch app required!</string>
    <string name="addon_urbandroid_sony">Sony</string>
    <string name="addons_apnea_desc">@string/apnea_category_summary</string>
    <string name="addons_apnea_link">https://sleep.urbandroid.org/docs/sleep/sleep_apnea.html</string>
    <string name="addons_apnea_res">ic_feature_o2</string>
    <string name="addons_apnea_title">@string/apnea_category</string>
    <string name="addons_backup_desc">Backup your sleep data and then access it from other devices or your desktop. Share, compare, and analyze your sleep.</string>
    <string name="addons_backup_package">com.urbandroid.sleep.addon.port</string>
    <string name="addons_backup_res">ic_unlock_cloud_backup</string>
    <string name="addons_backup_title">SleepCloud</string>
    <string name="addons_captcha_desc">More CAPTCHA to get you out of bed on time.</string>
    <string name="addons_captcha_link">https://play.google.com/store/apps/details?id=com.urbandroid.sleep.captchapack</string>
    <string name="addons_captcha_res">ic_captcha_qrcaptcha</string>
    <string name="addons_captcha_title">@string/captcha_preferene_title</string>
    <string name="addons_hue_desc">@string/purchase_hue_advocate</string>
    <string name="addons_hue_link">@string/philips_hue_offer_link</string>
    <string name="addons_hue_res">ic_feature_smartlight</string>
    <string name="addons_hue_title">@string/smartlight_philips_hue</string>
    <string name="addons_install">Read more</string>
    <string name="addons_lullaby_desc">61+ new lullabies for your smooth fall asleep.</string>
    <string name="addons_lullaby_more_short">new lullabies</string>
    <string name="addons_lullaby_package">com.urbandroid.sleep.addon.lullaby</string>
    <string name="addons_lullaby_res">ic_lullaby_all</string>
    <string name="addons_lullaby_title">@string/lullaby</string>
    <string name="ads">Ads</string>
    <string name="ads_personalization_opt_out">Don\'t personalize ads</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_self_disposable">Delete after ringing</string>
    <string name="alarm_terminate_tracking">Terminate tracking</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_opt_out">Don\'t collect anonymous usage stats</string>
    <string name="automation">Automation</string>
    <string name="backup">Backup</string>
    <string name="backup_enable">Configured in \'Device settings - Privacy - Backup\'</string>
    <string name="captcha_preference_summary">Prove that you are fully awake by solving a little task to stop the alarm</string>
    <string name="category_automation_summary">Tasker, IFTTT, Webhooks, MQTT…</string>
    <string name="category_wake_up">Wake up</string>
    <string name="connected">Connected</string>
    <string name="copy_record">Copy To clipboard</string>
    <string name="delete">Delete</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_disabled">Delete all disabled</string>
    <string name="delete_location">Delete location</string>
    <string name="disable_alarm_for_today">Skip next</string>
    <string name="disconnected">Disconnected</string>
    <string name="documentation">Documentation</string>
    <string name="enable_alarm_for_today">Don\'t skip</string>
    <string name="experiments_optout">Disable experimental features</string>
    <string name="facebook_ads">Facebook Ads</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_general_redesign">Please let us know how you like the redesign of this screen.</string>
    <string name="gentle_wake_up">Gentle wake up</string>
    <string name="global_preference">App settings</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="google_fit">Google Fit</string>
    <string name="graphs">Graphs</string>
    <string name="health_connect">Health Connect</string>
    <string name="help">Help</string>
    <string name="legend">Legend</string>
    <string name="location">Location</string>
    <string name="manage_gdpr_consent">Manage consent</string>
    <string name="menu_all">All</string>
    <string name="menu_copy_alarm">Copy alarm</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="next_alarm">Next alarm</string>
    <string name="noise">Noise</string>
    <string name="non_deep_sleep_window_title">Smart period</string>
    <string name="phone_call_summary">Suppress alarms, lullabies, and noise recording in phone calls.</string>
    <string name="phone_call_title">Handle phone calls</string>
    <string name="play_all_recording">Play all</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_summary">Your privacy matters</string>
    <string name="rating_comment_label">Comment</string>
    <string name="reset_home_location">Reset home location</string>
    <string name="restore_settings">Restore settings</string>
    <string name="restore_settings_warn">Restoring settings from backup will override your current settings and change the apps behavior.</string>
    <string name="samsung_shealth">Samsung Health</string>
    <string name="scoped_storage">Scoped storage</string>
    <string name="send_on_demand_error">Report a bug</string>
    <string name="service_google_home">Google Home</string>
    <string name="service_google_home_limited">BETA: Limited to first 100 users</string>
    <string name="services_summary">Sync, Share, Play, Automate</string>
    <string name="set_alarm">Set alarm</string>
    <string name="settings">Settings</string>
    <string name="settings_backup_local">Local storage backup</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_alarm">Default alarm</string>
    <string name="settings_category_android_backup">Android app data backup</string>
    <string name="settings_category_backup">Cloud backup</string>
    <string name="settings_category_backup_summary">SleepCloud, Google Drive, Dropbox</string>
    <string name="settings_category_captcha">CAPTCHA</string>
    <string name="settings_category_smartlight">Smartlight</string>
    <string name="settings_category_social">Sharing sleep with friends</string>
    <string name="settings_geo_opt_out">Don\'t store sleep location</string>
    <string name="settings_wake_up_check">Wake up check</string>
    <string name="share_android">Share</string>
    <string name="share_facebook">Express share</string>
    <string name="show_map">Show on map</string>
    <string name="sound">Sound</string>
    <string name="spotify">Spotify</string>
    <string name="storage_path">Storage path</string>
    <string name="support">Support</string>
    <string name="sync_now">Sync now</string>
    <string name="target_sleep_time_notify_title">Bedtime notification</string>
    <string name="terminate_tracking_summary">Alarm dismiss will end current sleep tracking</string>
    <string name="terms">Terms of use</string>
    <string name="time">Time</string>
    <string name="turn_on">Turn on</string>
    <string name="undo">Undo</string>
    <string name="wake_up_check_expl">Double-check you\'re awake after alarm dismiss</string>
    <string name="weather">Weather</string>
</resources>