<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_graph"
        android:id="@+id/menu_graphs_list"
        android:title="@string/graphs"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_share_variant"
        android:id="@+id/share_action_provider"
        android:title="@string/share_android"/>
    <item
        android:icon="@drawable/ic_action_noise"
        android:id="@+id/menu_noise"
        android:title="@string/noise"/>
    <item
        android:icon="@drawable/ic_information"
        android:id="@+id/menu_legend"
        android:title="@string/legend"/>
    <item
        android:icon="@drawable/ic_pencil"
        android:id="@+id/menu_edit_record"
        android:title="@string/rating_comment_label"/>
    <item
        android:icon="@drawable/ic_action_discard"
        android:id="@+id/menu_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_show_map"
        android:visible="false"
        android:title="@string/show_map"/>
    <item
        android:id="@+id/menu_delete_location"
        android:visible="false"
        android:title="@string/delete_location"/>
    <item
        android:icon="@drawable/ic_share_variant"
        android:id="@+id/menu_share_facebook"
        android:title="@string/share_facebook"/>
    <item
        android:id="@+id/menu_copy_record"
        android:title="@string/copy_record"/>
    <item
        android:id="@+id/menu_doc"
        android:title="@string/documentation"/>
    <item
        android:id="@+id/menu_undo"
        android:visible="false"
        android:title="@string/undo"/>
    <item
        android:id="@+id/menu_sahed"
        android:visible="false"
        android:title="Sahed"/>
</menu>
