<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/settings">
    <Preference
        android:icon="@drawable/ic_information"
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="privacy_policy_summary"
        android:summary="@string/privacy_policy_summary"/>
    <PreferenceCategory
        android:layout="@layout/category_first"
        android:key="settings_category_main"/>
    <Preference
        android:icon="@drawable/ic_incognito"
        android:persistent="false"
        android:layout="@layout/preference"
        android:title="@string/privacy_policy"
        android:key="privacy_policy"/>
    <Preference
        android:icon="@drawable/ic_text"
        android:persistent="false"
        android:layout="@layout/preference"
        android:title="@string/terms"
        android:key="terms"/>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/analytics"
        android:key="settings_ads">
        <CheckBoxPreference
            android:icon="@drawable/ic_action_chart"
            android:layout="@layout/preference"
            android:title="@string/analytics"
            android:key="analytics_opt_out"
            android:summary="@string/analytics_opt_out"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/ads"
        android:key="settings_ads">
        <Preference
            android:icon="@drawable/ic_no_ads"
            android:persistent="false"
            android:layout="@layout/preference"
            android:title="@string/ads_personalization_opt_out"
            android:key="ads_opt_out"/>
        <Preference
            android:icon="@drawable/ic_action_accept"
            android:persistent="false"
            android:layout="@layout/preference"
            android:title="@string/manage_gdpr_consent"
            android:key="gdpr_consent"/>
        <Preference
            android:icon="@drawable/ic_cog"
            android:persistent="false"
            android:layout="@layout/preference"
            android:title="@string/facebook_ads"
            android:key="ads_settings"/>
    </PreferenceCategory>
    <com.urbandroid.sleep.gui.pref.LamerPreferenceCategory
        android:layout="@layout/category"
        android:title="@string/backup"
        android:key="settings_category_backup"
        show="1">
        <Preference
            android:icon="@drawable/ic_sleepcloud"
            android:persistent="false"
            android:layout="@layout/preference"
            android:title="@string/addons_backup_title"
            android:key="sleepcloud"
            android:summary="@string/settings_category_backup_summary"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_cloud_upload"
            android:layout="@layout/preference"
            android:title="@string/settings_category_android_backup"
            android:key="backup"
            android:summary="@string/backup_enable"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_upload_plain"
            android:layout="@layout/preference"
            android:title="@string/settings_backup_local"
            android:key="backup_local"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="true"/>
        <Preference
            android:icon="@drawable/empty_ab"
            android:layout="@layout/preference"
            android:title="@string/storage_path"
            android:key="backup_storage_path"
            android:summary="@string/storage_path"/>
        <CheckBoxPreference
            android:icon="@drawable/empty_ab"
            android:layout="@layout/preference"
            android:title="@string/scoped_storage"
            android:key="scoped_storage"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="false"/>
        <Preference
            android:icon="@drawable/ic_cog"
            android:layout="@layout/preference"
            android:title="@string/restore_settings"
            android:key="restore_settings"
            android:summary="@string/restore_settings_warn"
            android:defaultValue="true"/>
        <Preference
            android:icon="@drawable/ic_menu_down"
            android:layout="@layout/preference_more"
            android:title="Advance settings"/>
    </com.urbandroid.sleep.gui.pref.LamerPreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/location"
        android:key="settings_category_location">
        <CheckBoxPreference
            android:icon="@drawable/ic_action_geo0"
            android:layout="@layout/preference"
            android:title="@string/settings_geo_opt_out"
            android:key="geo_opt_out"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="false"/>
        <Preference
            android:icon="@drawable/ic_action_home"
            android:persistent="false"
            android:layout="@layout/preference"
            android:title="@string/reset_home_location"
            android:key="reset_home"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_action_rain"
            android:layout="@layout/preference"
            android:title="@string/weather"
            android:key="weather"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <com.urbandroid.sleep.gui.pref.LamerPreferenceCategory
        android:layout="@layout/category"
        android:title="@string/settings_category_advanced"
        android:key="settings_category_advanced"
        show="0">
        <CheckBoxPreference
            android:icon="@drawable/ic_experiment"
            android:layout="@layout/preference"
            android:title="@string/experiments_optout"
            android:key="experiments_optout"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_volume_off"
            android:layout="@layout/preference"
            android:title="@string/phone_call_title"
            android:key="phone_call"
            android:summary="@string/phone_call_summary"
            android:widgetLayout="@layout/preference_switch_widget"
            android:defaultValue="false"/>
        <Preference
            android:icon="@drawable/ic_menu_down"
            android:layout="@layout/preference_more"
            android:title="Advance settings"/>
    </com.urbandroid.sleep.gui.pref.LamerPreferenceCategory>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty1"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty2"/>
</PreferenceScreen>
