<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/settings">
    <Preference
        android:persistent="false"
        android:layout="@layout/preference_summary"
        android:key="services_expl"
        android:summary="@string/services_summary"/>
    <PreferenceCategory
        android:layout="@layout/category_empty"
        android:key="settings_category_services">
        <Preference
            android:icon="@drawable/ic_unlock_local_backup"
            android:layout="@layout/preference_card"
            android:title="@string/settings_backup_local"
            android:key="settings_category_backup_local"/>
        <Preference
            android:icon="@drawable/ic_unlock_cloud_backup"
            android:layout="@layout/preference_card"
            android:title="@string/settings_category_backup"
            android:key="settings_category_backup"
            android:summary="@string/settings_category_backup_summary"/>
        <Preference
            android:icon="@drawable/ic_service_google_home"
            android:persistent="false"
            android:layout="@layout/preference_card"
            android:title="@string/service_google_home"
            android:key="settings_google_home_automation"
            android:summary="@string/service_google_home_limited"/>
        <Preference
            android:icon="@drawable/ic_feature_smartlight"
            android:layout="@layout/preference_card"
            android:title="@string/settings_category_smartlight"
            android:key="settings_category_smartlight"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_lullaby_spotify_color"
            android:persistent="true"
            android:enabled="true"
            android:layout="@layout/preference_card"
            android:title="@string/spotify"
            android:key="spotify"
            android:widgetLayout="@layout/preference_switch_widget"
            android:summaryOn="@string/connected"
            android:summaryOff="@string/disconnected"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_service_hc_png"
            android:persistent="true"
            android:layout="@layout/preference_card"
            android:title="@string/health_connect"
            android:key="health_connect"
            android:widgetLayout="@layout/preference_switch_widget"
            android:summaryOn="@string/connected"
            android:summaryOff="@string/disconnected"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_service_fit"
            android:persistent="true"
            android:enabled="true"
            android:layout="@layout/preference_card"
            android:title="@string/google_fit"
            android:key="google_fit"
            android:widgetLayout="@layout/preference_switch_widget"
            android:summaryOn="@string/connected"
            android:summaryOff="@string/disconnected"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_service_shealth"
            android:persistent="true"
            android:enabled="true"
            android:layout="@layout/preference_card"
            android:title="@string/samsung_shealth"
            android:key="samsung_shealth"
            android:widgetLayout="@layout/preference_switch_widget"
            android:summaryOn="@string/connected"
            android:summaryOff="@string/disconnected"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_service_calendar"
            android:persistent="true"
            android:enabled="true"
            android:layout="@layout/preference_card"
            android:title="@string/google_calendar"
            android:key="google_calendar"
            android:widgetLayout="@layout/preference_switch_widget"
            android:summaryOn="@string/connected"
            android:summaryOff="@string/disconnected"/>
        <Preference
            android:icon="@drawable/ic_service_twitter"
            android:layout="@layout/preference_card"
            android:title="@string/settings_category_social"
            android:key="settings_category_social"/>
        <Preference
            android:icon="@drawable/ic_feature_automagic"
            android:persistent="false"
            android:layout="@layout/preference_card"
            android:title="@string/automation"
            android:key="settings_category_automation"
            android:summary="@string/category_automation_summary"/>
        <Preference
            android:icon="@drawable/preview_support"
            android:persistent="false"
            android:layout="@layout/preference_card"
            android:title="@string/support"
            android:key="settings_category_support"
            android:summary="@string/send_on_demand_error"/>
        <Preference
            android:icon="@drawable/ic_refresh"
            android:enabled="true"
            android:layout="@layout/preference"
            android:title="@string/sync_now"
            android:key="services_sync_now"
            android:summary=""/>
    </PreferenceCategory>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty1"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty2"/>
</PreferenceScreen>
