<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_share_variant"
        android:id="@+id/share_action_provider"
        android:title="@string/share_android"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_help_q"
        android:id="@+id/menu_doc"
        android:title="@string/documentation"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_pencil"
        android:id="@+id/menu_edit_record"
        android:title="@string/rating_comment_label"/>
    <item
        android:icon="@drawable/ic_action_noise"
        android:id="@+id/menu_noise"
        android:title="@string/noise"/>
    <item
        android:icon="@drawable/ic_eye"
        android:id="@+id/menu_delete_awake"
        android:visible="true"
        android:title="@string/delete"/>
    <item
        android:icon="@drawable/ic_action_geo0"
        android:id="@+id/menu_delete_location"
        android:visible="false"
        android:title="@string/delete_location"/>
    <item
        android:icon="@drawable/ic_action_discard"
        android:id="@+id/menu_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_copy_record"
        android:title="@string/copy_record"/>
    <item
        android:id="@+id/menu_undo"
        android:visible="false"
        android:title="@string/undo"/>
</menu>
