<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:robobunny="http://robobunny.com" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:title="@string/set_alarm">
    <com.urbandroid.sleep.gui.AlarmTimePreference
        android:icon="@drawable/empty_ab"
        android:persistent="false"
        android:layout="@layout/preference_time"
        android:title="@string/time"
        android:key="time"/>
    <com.urbandroid.sleep.alarmclock.RepeatChipPreference
        android:icon="@drawable/ic_action_repeat"
        android:title="@string/alarm_repeat"
        android:key="setRepeat"/>
    <PreferenceCategory
        android:layout="@layout/category_empty"
        android:key="settings_category_next_alarm">
        <com.urbandroid.sleep.gui.ButtonPreference
            android:icon="@drawable/empty_ab"
            android:persistent="false"
            android:layout="@layout/preference_button"
            android:title="@string/disable_alarm_for_today"
            android:key="skip"
            android:summary="@string/next_alarm"/>
        <com.urbandroid.sleep.gui.NextAlarmPreference
            android:icon="@drawable/ic_calendar"
            android:layout="@layout/preference_next_alarm"
            android:key="alarm_next"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/category_empty"
        android:title="@string/category_wake_up"
        android:key="settings_category_alarm_ringtone">
        <com.urbandroid.sleep.gui.DefaultValueListPreference
            android:icon="@drawable/ic_feature_smart_period"
            android:persistent="false"
            android:entries="@array/non_deep_sleep_window_entries"
            android:layout="@layout/preference_card"
            android:title="@string/non_deep_sleep_window_title"
            android:key="alarm_non_deep_sleep_window"
            android:dialogTitle="@string/non_deep_sleep_window_title"
            android:entryValues="@array/non_deep_sleep_window_values"/>
        <com.urbandroid.sleep.gui.DefaultValuePreference
            android:icon="@drawable/ic_captcha_default"
            android:persistent="false"
            android:layout="@layout/preference_card_button"
            android:title="@string/settings_category_captcha"
            android:key="alarm_captcha"
            android:summary="@string/captcha_preference_summary"/>
        <com.urbandroid.sleep.gui.DefaultValueListPreference
            android:icon="@drawable/ic_feature_wake_up_check"
            android:persistent="false"
            android:entries="@array/wake_app_check_per_alarm_entries"
            android:layout="@layout/preference_card_button"
            android:title="@string/settings_wake_up_check"
            android:key="wake_up_check"
            android:dialogTitle="@string/wake_up_check_expl"
            android:entryValues="@array/wake_app_check_per_alarm_values"/>
        <com.urbandroid.sleep.gui.DefaultValuePreference
            android:icon="@drawable/ic_sound_tone_color"
            android:persistent="false"
            android:layout="@layout/preference_card"
            android:title="@string/sound"
            android:key="ringtone_preference"/>
        <com.urbandroid.sleep.gui.DefaultValuePreference
            android:icon="@drawable/ic_feature_gentle"
            android:persistent="false"
            android:layout="@layout/preference_card"
            android:title="@string/gentle_wake_up"
            android:key="gentle_alarm"/>
    </PreferenceCategory>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference_card_no_icon"
        android:title="@string/feedback"
        android:key="feedback"
        android:summary="@string/feedback_general_redesign"/>
    <com.urbandroid.sleep.gui.DefaultValuePreference
        android:icon="@drawable/ic_feature_bedtime"
        android:persistent="false"
        android:layout="@layout/preference_card"
        android:title="@string/target_sleep_time_notify_title"
        android:key="alarm_bedtime"/>
    <com.urbandroid.sleep.gui.DefaultValuePreference
        android:icon="@drawable/ic_feature_snooze"
        android:persistent="false"
        android:layout="@layout/preference_card"
        android:title="@string/alarm_alert_snooze_text"
        android:key="alarm_snooze"/>
    <CheckBoxPreference
        android:icon="@drawable/ic_action_track_off"
        android:persistent="false"
        android:layout="@layout/preference"
        android:title="@string/alarm_terminate_tracking"
        android:key="alarm_terminate_tracking"
        android:summary="@string/terminate_tracking_summary"
        android:widgetLayout="@layout/preference_switch_widget"/>
    <CheckBoxPreference
        android:icon="@drawable/ic_action_discard"
        android:persistent="false"
        android:layout="@layout/preference"
        android:title="@string/alarm_self_disposable"
        android:key="alarm_self_dispose"
        android:widgetLayout="@layout/preference_switch_widget"/>
    <PreferenceCategory
        android:layout="@layout/category"
        android:title="@string/global_preference"/>
    <Preference
        android:icon="@drawable/ic_cog"
        android:persistent="false"
        android:layout="@layout/preference"
        android:title="@string/settings_category_alarm"
        android:key="global_preference"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty1"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty2"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty3"/>
    <Preference
        android:persistent="false"
        android:layout="@layout/preference"
        android:key="empty4"/>
</PreferenceScreen>
